[package]
name = "rsolver"
version = "1.0.0"
description = "Automatically assign projects to students"
authors = ["Samuel Tardieu <sam@rfc1149.net>"]
edition = "2021"
license = "Apache-2.0/MIT"
rust-version = "1.74.1"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6.2"
csv = "1.3.0"
eyre = "0.6.12"
pathfinding = "4.9.1"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "mysql", "macros", "any"] }
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[features]
default = []
sqlite = ["sqlx/sqlite"]
